refactor: 错别字修改，并添加图片的出处说明

--- a/article/2021/开发必懂的文件加解密/开发必懂的文件加解密.md
+++ b/article/2021/开发必懂的文件加解密/开发必懂的文件加解密.md
@@ -1,6 +1,6 @@
 ## 开发必懂的文件加解密
 
-> **本文作者：[coolyuantao]](https://juejin.cn/user/1047150053304157)**
+> **本文作者：[coolyuantao](https://juejin.cn/user/1047150053304157)**
 
 ![encrypt](./encrypt.png)
 
@@ -315,7 +315,7 @@ function decrypt (fileBuffer) {
 ### 浏览器端如何解析该文件
 由于现在整个文件格式都是二进制流，现代的浏览器都是有相应的能力去读取并做处理的，这样也可以在用户上传文件时先做一定的初步处理，体验会有比较大的提升
 
-可以使用`DataView`的方式把二进制数据读取出来，详情可以参考：https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/DataView，初步的实现如下：
+可以使用`DataView`的方式把二进制数据读取出来，详情可以参考：[DataView](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/DataView)，初步的实现如下：
 ```javascript
 /**
  * 把二进制流转成对应ascii字符
@@ -357,9 +357,11 @@ function test () {
 
 文件的加密、解密在后端其实是一个很常规的操作，除了上面聊到的`AES`、`RSA`，其实还有其它很多加密方案，具体可以看看[Node.js crypto模块](http://nodejs.cn/api/crypto.html)，已经有内置比较多的方案可以直接使用。
 
-当然文件的加解密，也可以直接用`zip`、`7z`等这些压缩工具，再配合密码的方案，一般情况也是够用的，但是免不了有定制化的需求，一般也都是经合使用，比如上面的`fileBuffer`实际内部就是先用这些工具对文件进行了压缩并加密。还是以场景为重，多种方案结合效果更好。
+当然文件的加解密，也可以直接用`zip`、`7z`等这些压缩工具，再配合密码的方案，一般情况也是够用的，但是免不了有定制化的需求，一般也都是结合使用，比如上面的`fileBuffer`实际内部就是先用这些工具对文件进行了压缩并加密。还是以场景为重，多种方案结合效果更好。
 
 文件加解密的就讲到这里吧，还有什么其它问题的可以在评论区讨论，谢谢。
 
+## 附录
+本网站上使用图片链接出自：[https://images.ctfassets.net/9ijwdiuuvngh/5K4AedH960A824yg6CQyCi/8b3ee8ad5e63e6d50f78b9d7aa749669/Header_Encryption.png](https://images.ctfassets.net/9ijwdiuuvngh/5K4AedH960A824yg6CQyCi/8b3ee8ad5e63e6d50f78b9d7aa749669/Header_Encryption.png)，使用搜索引擎查找，未能联系到图片相应作者，本着纯粹技术分享的原则与心态，如果有侵犯到你的权利，请联系我们，立马删除，谢谢。
 
 
