feat: 优化文章格式和 readme

--- a/article/2021/开发必懂的文件加解密/开发必懂的文件加解密.md
+++ b/article/2021/开发必懂的文件加解密/开发必懂的文件加解密.md
@@ -6,9 +6,9 @@
 
 ### 背景
 
-最近团队遇到一个小需求，存在两个系统A、B，系统A支持用户在线制作皮肤包，制作后的皮肤包用户可以下载后，导入到另外的系统B上。皮肤包本身的其实就是一个zip压缩包，系统B接收到压缩包后，**解压**并做一些常规的校验，比如版本、内容合法性校验等，整体功能也比较简单。
+最近团队遇到一个小需求，存在两个系统 A、B，系统 A 支持用户在线制作皮肤包，制作后的皮肤包用户可以下载后，导入到另外的系统 B 上。皮肤包本身的其实就是一个 zip 压缩包，系统 B 接收到压缩包后，**解压**并做一些常规的校验，比如版本、内容合法性校验等，整体功能也比较简单。
 
-但没想到啊，一帮测试人员对我们开发人员一顿输出，首先绕过系统A搞了几个视频文件，把后缀改成`zip`就直接想上传，系统B每次都是等到上传完后才发现文件不合法，系统B在文件没上传完前又无法解压，也不知道文件内容是不是合法的，就这么消耗了大量带宽、大量时间后才提示用户皮肤包有问题。
+但没想到啊，一帮测试人员对我们开发人员一顿输出，首先绕过系统 A 搞了几个视频文件，把后缀改成 `zip` 就直接想上传，系统 B 每次都是等到上传完后才发现文件不合法，系统 B 在文件没上传完前又无法解压，也不知道文件内容是不是合法的，就这么消耗了大量带宽、大量时间后才提示用户皮肤包有问题。
 
 这里涉及了两个问题，我们来捋一捋：
 1. 文件如何做加密，这样用户便无法去逆向，压缩包内部的敏感信息不会泄露出去。
@@ -16,15 +16,15 @@
 
 ## AES VS RSA
 
-说到加密，自己很多人会想到 [对称算法AES](https://en.wikipedia.org/wiki/Advanced_Encryption_Standard)，以及 [非对称算法RSA](https://en.wikipedia.org/wiki/RSA_(cryptosystem))。这两种算法按字面意思也较好理解，对称加密技术说白一点就是加密跟解密使用的是同一个密钥，这种加密算法速度极快，安全级别高，加密前后的大小一致；非对称加密技术则有`公钥PK`、`私钥SK`，算法的原理在于寻找两个素数，让他们的乘积刚好等于一个约定的数字，非对称算法的安全性是依赖于大数的分解，这个目前没有理论支持可以快速破解，它的安全性完全依赖于这个密钥的长度，一般用1024位已经足够使用。但是它的速度相比对称算法慢得多，一般仅用于少量数据的加密，**待加密的数据长度不能超过密钥的长度**。
+说到加密，自己很多人会想到[对称算法 AES](https://en.wikipedia.org/wiki/Advanced_Encryption_Standard) 以及[非对称算法 RSA](https://en.wikipedia.org/wiki/RSA_(cryptosystem))。这两种算法按字面意思也较好理解，对称加密技术说白一点就是加密跟解密使用的是同一个密钥，这种加密算法速度极快，安全级别高，加密前后的大小一致；非对称加密技术则有`公钥PK`、`私钥SK`，算法的原理在于寻找两个素数，让他们的乘积刚好等于一个约定的数字，非对称算法的安全性是依赖于大数的分解，这个目前没有理论支持可以快速破解，它的安全性完全依赖于这个密钥的长度，一般用 1024 位已经足够使用。但是它的速度相比对称算法慢得多，一般仅用于少量数据的加密，**待加密的数据长度不能超过密钥的长度**。
 
 ## 使用 AES 对文件加密
 
-结合这两种加密方式的优缺点，我们采用AES对文件本身做加解密，使用AES的原因主要考虑如下：
-1. 加解密性能问题，AES的速度极快，相比RSA有1000倍以上提升。
-2. RSA对源文有长度的要求，最大长度仅有密钥长度。
+结合这两种加密方式的优缺点，我们采用 AES 对文件本身做加解密，使用 AES 的原因主要考虑如下：
+1. 加解密性能问题，AES 的速度极快，相比 RSA 有 1000 倍以上提升。
+2. RSA 对源文有长度的要求，最大长度仅有密钥长度。
 
-AES的加密算法 Node.js 的[crypto](http://nodejs.cn/api/crypto.html)模块中已经有内置，具体的使用可以参考官方文档。
+AES 的加密算法 Node.js 的[crypto](http://nodejs.cn/api/crypto.html)模块中已经有内置，具体的使用可以参考官方文档。
 
 ### AES 加密逻辑
 
@@ -104,16 +104,16 @@ const key = crypto.randomBytes(32);
 const iv = crypto.randomBytes(16);
 ```
 
-通过上述的调整后，加解密文件是比较容易的，回到我们的业务系统上面，系统A生成的压缩包，最终是需要给系统B使用，两个系统是隔离的，那这样`key`、`iv`如何传输到系统B上面呢，况且还是动态生成的，生成出来`key`系统B是不知道的。
+通过上述的调整后，加解密文件是比较容易的，回到我们的业务系统上面，系统 A 生成的压缩包，最终是需要给系统 B 使用，两个系统是隔离的，那这样 `key`、`iv` 如何传输到系统 B 上面呢，况且还是动态生成的，生成出来 `key` 系统 B 是不知道的。
 
-读到这聪明的你可能会想到，在把**压缩包给到B的时候，顺便把`key`、`iv`一同提交过去不就可以了**，但细想了下，这个肯定不能明文把这个密钥发送过去，要不这个加密意义何在。
+读到这聪明的你可能会想到，在把**压缩包给到 B 的时候，顺便把 `key`、`iv` 一同提交过去不就可以了**，但细想了下，这个肯定不能明文把这个密钥发送过去，要不这个加密意义何在。
 
 
-这时便需要用上**RSA非对称加密技术**了。
+这时便需要用上 **RSA 非对称加密技术**了。
 
-## 使用RSA算法对密钥再次进行非对称加密
+## 使用 RSA 算法对密钥再次进行非对称加密
 
-RSA的加密算法 Node.js 的 [crypto模块](http://nodejs.cn/api/crypto.html) 中已经有内置，具体的使用可以参考官方文档。
+RSA 的加密算法 Node.js 的 [crypto 模块](http://nodejs.cn/api/crypto.html) 中已经有内置，具体的使用可以参考官方文档。
 
 ### 生成 RSA 的公钥与私钥
 
@@ -165,7 +165,7 @@ function rsaDecrypt (buffer) {
 
 ### RSA 具体使用
 
-有了上述接口后，便可对AES的密钥进行加密后再传输，服务器B保存好 `RSA私钥` ，服务器A则可以直接用 `RSA公钥` 对数据加密后再发送，结合刚 `AES` 的逻辑后，如下：
+有了上述接口后，便可对 AES 的密钥进行加密后再传输，服务器 B 保存好 `RSA 私钥` ，服务器 A 则可以直接用 `RSA 公钥` 对数据加密后再发送，结合刚 `AES` 的逻辑后，如下：
 
 
 ```javascript
@@ -203,7 +203,7 @@ function decrypt ({file, key}) {
 }
 ```
 
-这样结合在一起后，服务器A生成的压缩包，只要包含好 `{file, key}` 这两块内容，服务器B便可把文件解密出来了，这样基本上实现了我们第一点的目标：**1. 文件如何做加密，这样用户便无法去逆向，压缩包内部的敏感信息不会泄露出去**
+这样结合在一起后，服务器 A 生成的压缩包，只要包含好 `{file, key}` 这两块内容，服务器 B 便可把文件解密出来了，这样基本上实现了我们第一点的目标：**1. 文件如何做加密，这样用户便无法去逆向，压缩包内部的敏感信息不会泄露出去**
 
 
 但还遗留了另外一个问题需要解决：**2. 服务端在接收到信息流时，在未传输完时如何去判断压缩包的合法性，提前告知用户**
@@ -221,7 +221,7 @@ function decrypt ({file, key}) {
 ```
 
 
-但如果用这种方式保存，一般情况下还要对这个 `zip文件` 做下加密，然后改下后缀名，但是服务器B在读取这个文件后仍然是需要全部接收，再解压到临时目录，读取内容后才可以做校验，这样问题仍然解决不了。
+但如果用这种方式保存，一般情况下还要对这个 `zip文件` 做下加密，然后改下后缀名，但是服务器 B 在读取这个文件后仍然是需要全部接收，再解压到临时目录，读取内容后才可以做校验，这样问题仍然解决不了。
 
 
 除此之外，还有另外一个常见的需求，产品一般希望在浏览器侧在文件上传时就先做初步的解析，把明显不合法的文件提示到用户，这样用户体验更好。
@@ -245,10 +245,10 @@ function decrypt ({file, key}) {
 ```
 
 - `flag`：
-固定标识`THEME`，长度：`8 byte`，说明该压缩包为一个皮肤包，这样可以快速对压缩包进行识别
+固定标识 `THEME`，长度：`8 byte`，说明该压缩包为一个皮肤包，这样可以快速对压缩包进行识别
 
 - `extra length`：
-`extra data`的真实长度，这是一个16进制的数据，长度：`8 byte`，说明插入的数据长度。比如：长度 `35` 的数据，转化为16进制后为 `0x23`，那这字段为 `00000023`
+`extra data` 的真实长度，这是一个 16 进制的数据，长度：`8 byte`，说明插入的数据长度。比如：长度 `35` 的数据，转化为 16 进制后为 `0x23`，那这字段为 `00000023`
 
 - `extra data`：
 使用 `RSA` 加密过的数据，我们可以把上述需要用 `RSA` 加密的信息全部放在这里，比如 `key` 字段、版本号、描述信息等
@@ -368,13 +368,13 @@ function test () {
 ## 结语
 
 
-文件的加密、解密在后端其实是一个很常规的操作，除了上面聊到的 `AES`、`RSA`，其实还有其它很多加密方案，具体可以看看 [Node.js crypto模块](http://nodejs.cn/api/crypto.html)，已经有内置比较多的方案可以直接使用。
+文件的加密、解密在后端其实是一个很常规的操作，除了上面聊到的 `AES`、`RSA`，其实还有其它很多加密方案，具体可以看看 [Node.js crypto 模块](http://nodejs.cn/api/crypto.html)，已经有内置比较多的方案可以直接使用。
 
 当然文件的加解密，也可以直接用 `zip`、`7z` 等这些压缩工具，再配合密码的方案，一般情况也是够用的，但是免不了有定制化的需求，一般也都是结合使用，比如上面的 `fileBuffer` 实际内部就是先用这些工具对文件进行了压缩并加密。还是以场景为重，多种方案结合效果更好。
 
 文件加解密的就讲到这里吧，还有什么其它问题的可以在评论区讨论，谢谢。
 
-## 附录
+## 声明
 本网站上使用图片链接出自：[https://images.ctfassets.net/9ijwdiuuvngh/5K4AedH960A824yg6CQyCi/8b3ee8ad5e63e6d50f78b9d7aa749669/Header_Encryption.png](https://images.ctfassets.net/9ijwdiuuvngh/5K4AedH960A824yg6CQyCi/8b3ee8ad5e63e6d50f78b9d7aa749669/Header_Encryption.png)，使用搜索引擎查找，未能联系到图片相应作者，本着纯粹技术分享的原则与心态，如果有侵犯到你的权利，请联系我们，立马删除，谢谢。
 
 
